data/collection/fixes/descriptions/scala/scala-6357
```scala
object K {
   def q = {
      final class Y(val j: Int) extends AnyVal
      3
   }
}
```

```
K.scala:3: error: recursive method q needs result type
      final class Y(val j: Int) extends AnyVal
                  ^
```
If the result type of q is explicitly annotated, the expected error message "value class may not be a local class" results.